--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,28 +1,26 @@
 # Change these first
-owner: upptime # Your GitHub username
-repo: upptime # Your GitHub repository name
+owner: leplatrem # Your GitHub username
+repo: delivery-upptime # Your GitHub repository name
 
 # Add your sites here
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Broken Site
-    url: https://thissitedoesnotexist.com
-  - name: Test for HEAD
-    method: HEAD
-    url: https://www.google.com
-  - name: Secret Site
-    url: $SECRET_SITE
+  - name: RS
+    url: https://delivery-checks.prod.mozaws.net/checks/remotesettings
+  - name: RS Uptake
+    url: https://delivery-checks.prod.mozaws.net/checks/remotesettings-uptake-release
+  - name: RS Lambdas
+    url: https://delivery-checks.prod.mozaws.net/checks/remotesettings-lambdas
+  # - name: Test for HEAD
+  #   method: HEAD
+  #   url: https://www.google.com
+  # - name: Secret Site
+  #   url: $SECRET_SITE
 
 status-website:
   # Add your custom domain below, or remove the next line if you don't have a domain
-  cname: demo.upptime.js.org
+  # cname: demo.upptime.js.org
   # Uncomment the following line if you don't have a custom domain and add your repo name
-  # baseUrl: /upptime
+  baseUrl: /delivery-upptime
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Upptime
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
